Fix for overflow x and sticky head

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,13 +18,11 @@
 
 html {
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 body {
   min-height: 100vh;
   background-color: $background;
-  overflow-x: hidden;
 }
 
 a {
